Preparing an Android app for release https://flutter.dev/docs/deployment/android#step-2---enable-obfuscation-andor-minification
+ Signing the app
+ Enabling Proguard

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.jvmargs=-Xmx1536M
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Obfuscating Dart code
+extra-gen-snapshot-options=--obfuscate
